Add shared navbar to onboarding and sprint readiness

--- a/onboarding.html
+++ b/onboarding.html
@@ -43,6 +43,17 @@
 </head>
 <body>
 
+  <header class="app-navbar" role="banner">
+    <a class="app-navbar__logo" href="index.html">
+      <img src="logo.png" alt="JobSprint logo" loading="lazy" />
+      <span>JobSprint</span>
+    </a>
+    <nav class="app-navbar__nav" aria-label="Primary navigation">
+      <a class="app-navbar__link" href="workspace.html">Workspace</a>
+      <a class="app-navbar__link" href="mailto:hello@jobsprint.ai">Support</a>
+    </nav>
+  </header>
+
   <button id="backToWorkspace" class="back-to-workspace hidden">← Back to workspace</button>
 
   <!-- floating doodles -->
