--- a/sprint-readiness.html
+++ b/sprint-readiness.html
@@ -63,6 +63,16 @@
   </style>
 </head>
 <body>
+  <header class="app-navbar" role="banner">
+    <a class="app-navbar__logo" href="index.html">
+      <img src="logo.png" alt="JobSprint logo" loading="lazy" />
+      <span>JobSprint</span>
+    </a>
+    <nav class="app-navbar__nav" aria-label="Primary navigation">
+      <a class="app-navbar__link" href="workspace.html">Workspace</a>
+      <a class="app-navbar__link" href="mailto:hello@jobsprint.ai">Support</a>
+    </nav>
+  </header>
   <div class="floating-blob"></div>
   <div class="floating-blob"></div>
   <div class="floating-blob"></div>
