--- a/onboarding.html
+++ b/onboarding.html
@@ -124,7 +124,7 @@
     </div>
 
     <label>Total Experience (years)</label>
-    <input type="number" id="experience" min="0" placeholder="e.g., 5" />
+    <input type="number" id="experience" min="0" step="0.1" placeholder="e.g., 5.5" />
 
     <label>Current CTC</label>
     <input type="text" id="currentCTC" placeholder="e.g., ₹ 18 LPA" />
