--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
     .promo::before{width:360px;height:360px;background:radial-gradient(circle at center,rgba(255,255,255,.45),rgba(255,255,255,0));top:-120px;right:-100px;animation:promoFloat 18s ease-in-out infinite}
     .promo::after{width:260px;height:260px;background:radial-gradient(circle at center,rgba(255,255,255,.35),rgba(255,255,255,0));bottom:-80px;left:-60px;animation:promoFloat 16s ease-in-out infinite reverse}
     .promo-head{display:flex;align-items:center;gap:12px;font-weight:700;font-size:18px;letter-spacing:.4px;text-transform:uppercase}
-    .promo-head img{height:52px;width:auto}
+    .promo-head img{height:52px;width:auto;object-fit:contain;display:block}
     .promo h1{margin:18px 0 12px;font-size:34px;line-height:1.2}
     .promo p{margin:0;color:rgba(255,255,255,.82);font-size:16px;max-width:420px;line-height:1.6}
     .promo-points{margin:32px 0 0;padding:0;list-style:none;display:flex;flex-direction:column;gap:14px;color:rgba(255,255,255,.9);font-size:15px}
@@ -33,7 +33,7 @@
     .auth-panel{display:flex;align-items:center;justify-content:center;padding:40px 24px}
     .auth-card{width:min(440px,92%);background:rgba(255,255,255,.94);border:1px solid rgba(10,102,194,.18);border-radius:26px;padding:32px 30px;box-shadow:var(--shadow-sm);backdrop-filter:blur(14px)}
     .logo{display:flex;align-items:center;gap:12px;margin-bottom:12px}
-    .logo img{width:48px;height:48px}
+    .logo img{width:48px;height:48px;object-fit:contain;display:block}
     .logo-title{font-weight:700;font-size:18px;color:var(--brand-strong)}
     h1{font-size:24px;margin:12px 0 6px;line-height:1.3}
     .sub{color:var(--muted);font-size:14px;margin:0 0 22px}
@@ -58,7 +58,7 @@
     <section class="promo">
       <div>
         <div class="promo-head">
-          <img src="logo.png" alt="JobSprint mark" loading="lazy">
+          <img src="logo_illustration.png" alt="JobSprint mark" loading="lazy">
           <span>JobSprint</span>
         </div>
         <h1>Stay calm, land faster.</h1>
@@ -75,7 +75,7 @@
     <div class="auth-panel">
       <div class="auth-card">
         <div class="logo">
-          <img src="logo.png" alt="JobSprint logo" loading="lazy">
+          <img src="logo_illustration.png" alt="JobSprint logo" loading="lazy">
           <div>
             <div class="logo-title">Welcome to JobSprint</div>
             <div class="sub">Get started with your Google account</div>
