--- a/workspace.html
+++ b/workspace.html
@@ -23,7 +23,8 @@
   }
   .topin{max-width:1200px;margin:0 auto;display:flex;align-items:center;gap:16px;padding:12px 16px}
   .brand{display:flex;align-items:center;gap:10px}
-  .badge{width:36px;height:36px;border-radius:12px;background:#e6f0ff;display:grid;place-items:center;font-weight:700;color:#0a3d91}
+  .badge{width:36px;height:36px;border-radius:12px;overflow:hidden;display:grid;place-items:center;background:#fff;padding:4px}
+  .badge img{width:100%;height:100%;object-fit:contain;display:block}
   .navspacer{flex:1}
   .pill{display:inline-flex;align-items:center;gap:8px;background:#fff;border:1px solid #c8d9f4;border-radius:999px;padding:6px 10px;color:#0f3e7c}
   .ham{width:36px;height:36px;border-radius:10px;border:1px solid #c8d9f4;background:#fff;cursor:pointer}
@@ -230,7 +231,7 @@
   <div class="top">
     <div class="topin">
       <div class="brand">
-        <div class="badge">J</div>
+        <div class="badge"><img src="logo_illustration.png" alt="JobSprint logo" loading="lazy"></div>
         <div>
           <div style="font-weight:700;">JobSprint</div>
           <div id="userLine" style="font-size:12px;color:#2c4f80;">Welcome back</div>
