--- a/onboarding.html
+++ b/onboarding.html
@@ -16,7 +16,7 @@
     .floating:nth-of-type(2){width:110px;height:110px;bottom:12vh;right:12vw;animation-delay:-4s}
     .floating:nth-of-type(3){width:90px;height:90px;top:48vh;right:24vw;animation-delay:-8s}
     @keyframes float{0%,100%{transform:translate3d(0,0,0)}50%{transform:translate3d(14px,-18px,0)}}
-    .page-shell{position:relative;z-index:1;max-width:880px;margin:0 auto;padding:72px 24px 120px}
+    .page-shell{position:relative;z-index:1;max-width:var(--shell-max-width,880px);margin:0 auto;padding:72px 24px 120px}
     .stage-card{background:rgba(255,255,255,0.9);border-radius:28px;border:1px solid rgba(10,102,194,0.16);box-shadow:var(--shadow-sm);padding:48px 56px;margin-bottom:32px;backdrop-filter:blur(12px)}
     .stage-card header{margin-bottom:24px}
     h1{margin:0;font-size:30px;font-weight:700;color:var(--ink)}
