Refine onboarding navbar actions

--- a/sprint-readiness.html
+++ b/sprint-readiness.html
@@ -68,10 +68,7 @@
       <img src="logo.png" alt="JobSprint logo" loading="lazy" />
       <span>JobSprint</span>
     </a>
-    <nav class="app-navbar__nav" aria-label="Primary navigation">
-      <a class="app-navbar__link" href="workspace.html">Workspace</a>
-      <a class="app-navbar__link" href="mailto:hello@jobsprint.ai">Support</a>
-    </nav>
+    <nav class="app-navbar__nav" aria-label="Primary navigation"></nav>
   </header>
   <div class="floating-blob"></div>
   <div class="floating-blob"></div>
