--- a/onboarding.html
+++ b/onboarding.html
@@ -65,14 +65,12 @@
     .primary-btn:hover{transform:translateY(-1px);box-shadow:0 18px 32px rgba(10,102,194,0.2)}
     .ghost-btn{background:rgba(255,255,255,0.85);color:var(--brand-strong);border:1px solid rgba(10,102,194,0.16);border-radius:14px;padding:12px 22px;font-weight:600;font-size:15px;cursor:pointer;transition:background .2s ease,box-shadow .2s ease}
     .ghost-btn:hover{background:rgba(10,102,194,0.08);box-shadow:0 10px 22px rgba(10,102,194,0.12)}
-    .back-to-workspace{position:fixed;top:24px;right:24px;background:rgba(255,255,255,0.92);color:var(--brand-strong);border:1px solid rgba(10,102,194,0.2);border-radius:999px;padding:10px 18px;font-weight:600;font-size:13px;cursor:pointer;box-shadow:var(--shadow-sm);z-index:10;transition:transform .2s ease,box-shadow .2s ease}
-    .back-to-workspace:hover{transform:translateY(-1px);box-shadow:0 16px 30px rgba(10,102,194,0.18)}
     .hidden{display:none}
     .step-indicator{text-align:right;font-size:13px;color:var(--muted);margin-bottom:24px;font-weight:600}
     .footer-note{text-align:center;font-size:13px;color:var(--muted);margin-top:24px}
     .section-title{margin-top:32px;font-size:18px;font-weight:700;color:var(--ink)}
     .dual-grid{display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:18px}
-    @media(max-width:720px){.stage-card{padding:36px 24px}.dual-grid{grid-template-columns:1fr}.back-to-workspace{right:16px} .page-shell{padding-top:110px}}
+    @media(max-width:720px){.stage-card{padding:36px 24px}.dual-grid{grid-template-columns:1fr}.page-shell{padding-top:110px}}
   </style>
 </head>
 <body>
@@ -83,12 +81,9 @@
       <span>JobSprint</span>
     </a>
     <nav class="app-navbar__nav" aria-label="Primary navigation">
-      <a class="app-navbar__link" href="workspace.html">Workspace</a>
-      <a class="app-navbar__link" href="mailto:hello@jobsprint.ai">Support</a>
+      <button id="backToWorkspace" class="back-to-workspace hidden" type="button">← Back to workspace</button>
     </nav>
   </header>
-
-  <button id="backToWorkspace" class="back-to-workspace hidden">← Back to workspace</button>
 
   <!-- floating doodles -->
   <div class="floating" style="animation-delay:0s;"></div>
