--- a/signup.html
+++ b/signup.html
@@ -32,9 +32,8 @@
     .promo-footer{font-size:13px;color:rgba(255,255,255,.75);max-width:360px;line-height:1.5}
     .auth-panel{display:flex;align-items:center;justify-content:center;padding:40px 24px}
     .auth-card{width:min(440px,92%);background:rgba(255,255,255,.94);border:1px solid rgba(10,102,194,.18);border-radius:26px;padding:32px 30px;box-shadow:var(--shadow-sm);backdrop-filter:blur(14px)}
-    .logo{display:flex;align-items:center;gap:12px;margin-bottom:12px}
+    .logo{display:flex;align-items:center;justify-content:center;margin-bottom:12px}
     .logo img{width:48px;height:48px;object-fit:contain;display:block}
-    .logo-title{font-weight:700;font-size:18px;color:var(--brand-strong)}
     h1{font-size:24px;margin:12px 0 6px;line-height:1.3}
     .sub{color:var(--muted);font-size:14px;margin:0 0 22px}
     .g-btn-wrap{display:grid;place-items:center;margin-top:6px}
@@ -58,8 +57,7 @@
     <section class="promo">
       <div>
         <div class="promo-head">
-          <img src="logo_illustration.png" alt="JobSprint mark" loading="lazy">
-          <span>JobSprint</span>
+          <img src="logo.png" alt="JobSprint logo" loading="lazy">
         </div>
         <h1>Stay calm, land faster.</h1>
         <p>Structure your 90-day job search with resume diagnostics, guided application workflows, and a workspace built for consistency.</p>
@@ -75,12 +73,11 @@
     <div class="auth-panel">
       <div class="auth-card">
         <div class="logo">
-          <img src="logo_illustration.png" alt="JobSprint logo" loading="lazy">
-          <div>
-            <div class="logo-title">Welcome to JobSprint</div>
-            <div class="sub">Get started with your Google account</div>
-          </div>
+          <img src="logo.png" alt="JobSprint logo" loading="lazy">
         </div>
+
+        <h1>Welcome to JobSprint</h1>
+        <p class="sub">Get started with your Google account</p>
 
         <div id="error-banner" class="error-banner" role="alert" aria-live="assertive"></div>
 
