--- a/workspace.html
+++ b/workspace.html
@@ -11,10 +11,11 @@
     --bg1:#f0f6ff; --bg2:#e1edff; --ink:#0b1a33; --muted:#4b6078;
     --card:#fff; --line:#d5e3f7; --brand:#0a66c2; --brand-d:#084a91;
     --lane:#eef5ff; --shadow:0 12px 34px rgba(10,102,194,.12);
+    --coach-summary-width:260px;
   }
   *{box-sizing:border-box}
   body{margin:0;font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(120deg,var(--bg1),var(--bg2));color:var(--ink)}
-  .app{min-height:100vh;display:flex;flex-direction:column;transition:margin-left .32s ease}
+  .app{min-height:100vh;display:flex;flex-direction:column;padding-left:var(--coach-summary-width);transition:margin-left .32s ease,padding-left .32s ease}
 
   /* Topbar */
   .top{
@@ -161,7 +162,7 @@
   .coach-icon-btn:hover{background:#edf4ff}
   .coach-tips{margin:0;padding-left:18px;display:flex;flex-direction:column;gap:6px;color:#2c4f80;font-size:13px}
   .coach-footer{text-align:center;font-size:11px;color:#4a6ba3;padding-bottom:10px;display:flex;flex-direction:column;gap:4px}
-  .coach-summary{position:fixed;left:0;top:160px;z-index:34;display:flex;align-items:stretch;gap:12px;padding:16px 18px 16px 20px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 16px 16px 0;box-shadow:var(--shadow);max-width:280px;transition:box-shadow .2s ease}
+  .coach-summary{position:fixed;left:0;top:0;bottom:0;width:var(--coach-summary-width);height:100vh;z-index:34;display:flex;align-items:stretch;gap:12px;padding:16px 18px 16px 20px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 16px 16px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
   .coach-summary-body{display:flex;flex-direction:column;gap:10px;color:#1f4f94;font-size:12px;line-height:1.4}
   .coach-summary-body[role="status"]{max-width:200px}
@@ -178,8 +179,8 @@
   .coach-summary-chevron{font-size:18px;transition:transform .2s ease}
   .coach-summary.coach-open .coach-summary-chevron{transform:rotate(180deg)}
   .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
-  @media (max-width: 960px){.coach-summary{top:120px;max-width:240px;padding:14px 16px}.coach-summary-body[role="status"]{max-width:170px}}
-  .app.coach-open{margin-left:300px}
+  @media (max-width: 960px){:root{--coach-summary-width:220px}.coach-summary{padding:14px 16px}.coach-summary-body[role="status"]{max-width:170px}}
+  .app.coach-open{margin-left:300px;padding-left:0}
   .coach-inner::-webkit-scrollbar{width:6px}
   .coach-inner::-webkit-scrollbar-thumb{background:rgba(10,102,194,.35);border-radius:999px}
   @media (max-width: 960px){.app.coach-open{margin-left:0}.sprint-coach{width:min(320px,85vw)}.coach-grid{grid-template-columns:1fr}}
