--- a/workspace.html
+++ b/workspace.html
@@ -11,7 +11,7 @@
     --bg1:#f0f6ff; --bg2:#e1edff; --ink:#0b1a33; --muted:#4b6078;
     --card:#fff; --line:#d5e3f7; --brand:#0a66c2; --brand-d:#084a91;
     --lane:#eef5ff; --shadow:0 12px 34px rgba(10,102,194,.12);
-    --coach-summary-width:260px;
+    --coach-summary-width:200px;
   }
   *{box-sizing:border-box}
   body{margin:0;font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(120deg,var(--bg1),var(--bg2));color:var(--ink)}
@@ -162,24 +162,21 @@
   .coach-icon-btn:hover{background:#edf4ff}
   .coach-tips{margin:0;padding-left:18px;display:flex;flex-direction:column;gap:6px;color:#2c4f80;font-size:13px}
   .coach-footer{text-align:center;font-size:11px;color:#4a6ba3;padding-bottom:10px;display:flex;flex-direction:column;gap:4px}
-  .coach-summary{position:fixed;left:0;top:0;bottom:0;width:var(--coach-summary-width);height:100vh;z-index:34;display:flex;align-items:stretch;gap:12px;padding:16px 18px 16px 20px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 16px 16px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
+  .coach-summary{position:fixed;left:0;top:0;bottom:0;width:var(--coach-summary-width);height:100vh;z-index:34;display:flex;align-items:flex-start;gap:8px;padding:12px 12px 12px 16px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
-  .coach-summary-body{display:flex;flex-direction:column;gap:10px;color:#1f4f94;font-size:12px;line-height:1.4}
-  .coach-summary-body[role="status"]{max-width:200px}
-  .coach-summary-title{margin:0;font-size:13px;font-weight:700;color:#0f3e7c}
-  .coach-summary-item{display:flex;flex-direction:column;gap:4px}
-  .coach-summary-label{text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:11px}
-  .coach-summary-value{font-weight:700;font-size:16px;color:#0f3e7c}
-  .coach-summary-subtext{color:#2c4f80;font-size:12px}
-  .coach-summary-metrics{display:flex;gap:12px}
-  .coach-summary-metric{display:flex;flex-direction:column;gap:4px;min-width:70px}
-  .coach-summary-toggle{margin-left:auto;background:var(--brand);color:#fff;border:0;border-radius:999px;width:34px;height:34px;display:grid;place-items:center;cursor:pointer;box-shadow:0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,transform .2s ease}
+  .coach-summary-body{display:flex;flex-direction:column;gap:8px;color:#1f4f94;font-size:11px;line-height:1.3;min-width:0}
+  .coach-summary-title{margin:0;font-size:12px;font-weight:700;color:#0f3e7c;letter-spacing:.4px;text-transform:uppercase}
+  .coach-summary-row{display:flex;align-items:center;justify-content:space-between;gap:8px}
+  .coach-summary-label{text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:10px;white-space:nowrap}
+  .coach-summary-chip{display:inline-flex;align-items:center;justify-content:center;gap:4px;padding:3px 8px;border-radius:999px;background:#edf4ff;border:1px solid #c8d9f4;color:#0f3e7c;font-weight:600;font-size:11px;white-space:nowrap;min-width:0}
+  .coach-summary-chip.is-muted{color:#2c4f80;font-weight:500}
+  .coach-summary-toggle{margin-left:auto;background:var(--brand);color:#fff;border:0;border-radius:999px;width:30px;height:30px;display:grid;place-items:center;cursor:pointer;box-shadow:0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,transform .2s ease;flex-shrink:0}
   .coach-summary-toggle:hover{background:var(--brand-d)}
   .coach-summary.coach-open .coach-summary-toggle{background:#1b4f8f}
   .coach-summary-chevron{font-size:18px;transition:transform .2s ease}
   .coach-summary.coach-open .coach-summary-chevron{transform:rotate(180deg)}
   .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
-  @media (max-width: 960px){:root{--coach-summary-width:220px}.coach-summary{padding:14px 16px}.coach-summary-body[role="status"]{max-width:170px}}
+  @media (max-width: 960px){:root{--coach-summary-width:180px}.coach-summary{padding:10px 12px}}
   .app.coach-open{margin-left:300px;padding-left:0}
   .coach-inner::-webkit-scrollbar{width:6px}
   .coach-inner::-webkit-scrollbar-thumb{background:rgba(10,102,194,.35);border-radius:999px}
@@ -193,28 +190,29 @@
   <aside class="coach-summary" id="coachSummary" role="complementary" aria-label="Sprint coach summary">
     <div class="coach-summary-body" id="coachSummaryBody" role="status" aria-live="polite" aria-atomic="true">
       <p class="coach-summary-title">Sprint Snapshot</p>
-      <div class="coach-summary-item">
-        <span class="coach-summary-label">Today&rsquo;s Progress</span>
-        <span class="coach-summary-value" id="coachSummaryProgressValue">0 / 0</span>
-        <span class="coach-summary-subtext" id="coachSummaryProgressNote">Let&rsquo;s get your first win of the day.</span>
+      <div class="coach-summary-row">
+        <span class="coach-summary-label">Progress</span>
+        <span class="coach-summary-chip" id="coachSummaryProgressValue">0 / 0</span>
       </div>
-      <div class="coach-summary-item">
-        <span class="coach-summary-label">Quick Insight</span>
-        <span class="coach-summary-subtext" id="coachSummaryInsight">Insights will appear here soon.</span>
+      <div class="coach-summary-row">
+        <span class="coach-summary-label">Streak</span>
+        <span class="coach-summary-chip is-muted" id="coachSummaryProgressNote">0 days</span>
       </div>
-      <div class="coach-summary-metrics" aria-label="Resume and job description metrics">
-        <div class="coach-summary-metric">
-          <span class="coach-summary-label">Resume</span>
-          <span class="coach-summary-value" id="coachSummaryResume">--</span>
-        </div>
-        <div class="coach-summary-metric">
-          <span class="coach-summary-label">JD Fit</span>
-          <span class="coach-summary-value" id="coachSummaryJDFit">--</span>
-        </div>
+      <div class="coach-summary-row">
+        <span class="coach-summary-label">Insight</span>
+        <span class="coach-summary-chip" id="coachSummaryInsight">Pending</span>
       </div>
-      <div class="coach-summary-item">
-        <span class="coach-summary-label">Coach Tip</span>
-        <span class="coach-summary-subtext" id="coachSummaryTip">Fresh tips are loading.</span>
+      <div class="coach-summary-row" aria-label="Resume score">
+        <span class="coach-summary-label">Resume</span>
+        <span class="coach-summary-chip" id="coachSummaryResume">--</span>
+      </div>
+      <div class="coach-summary-row" aria-label="Job description fit score">
+        <span class="coach-summary-label">JD Fit</span>
+        <span class="coach-summary-chip" id="coachSummaryJDFit">--</span>
+      </div>
+      <div class="coach-summary-row">
+        <span class="coach-summary-label">Tip</span>
+        <span class="coach-summary-chip is-muted" id="coachSummaryTip">Loading</span>
       </div>
     </div>
     <button class="coach-summary-toggle" id="coachSummaryToggle" type="button" aria-controls="sprintCoachPanel" aria-expanded="false" aria-label="Open Sprint Coach">
@@ -464,6 +462,28 @@
     'Share a quick win with an accountability buddy.',
     'Block 20 minutes tonight to prep for tomorrow’s sprint.'
   ];
+
+  function shortenSummaryText(text, max = 24) {
+    if (!text) return '';
+    return text.length > max ? `${text.slice(0, max - 1)}…` : text;
+  }
+
+  function formatInsightBadge(item) {
+    if (!item) return 'Pending';
+    const { label, value } = item;
+    switch (label) {
+      case 'Applications Added':
+        return `Added ${value}`;
+      case 'Responses Received':
+        return `Replies ${value}`;
+      case 'Interviews Scheduled':
+        return `Interviews ${value}`;
+      case 'Average Fit Score':
+        return `Fit ${value}`;
+      default:
+        return shortenSummaryText(`${label}: ${value}`);
+    }
+  }
 
   function getMotivationalQuote(prevIndex = -1) {
     if (!motivationalQuotes.length) {
@@ -723,11 +743,12 @@
     const streakMessage = streak
       ? `You’re on a ${streak}-day streak 🔥 Keep it going!`
       : 'Start a new streak today—you got this!';
+    const streakSummary = streak ? `${streak} day${streak === 1 ? '' : 's'}` : '0 days';
     if (goalProgressFill) goalProgressFill.style.width = `${percent}%`;
     if (goalProgressText) goalProgressText.textContent = `${completed} of ${target} applications today`;
     if (goalStreakText) goalStreakText.textContent = streakMessage;
     if (coachSummaryProgressValue) coachSummaryProgressValue.textContent = summaryProgress;
-    if (coachSummaryProgressNote) coachSummaryProgressNote.textContent = streakMessage;
+    if (coachSummaryProgressNote) coachSummaryProgressNote.textContent = streakSummary;
   }
 
   function renderInsights() {
@@ -750,12 +771,7 @@
       card.append(strong, title);
       coachInsightsGrid.appendChild(card);
     });
-    if (coachSummaryInsight) {
-      const primary = items[0];
-      coachSummaryInsight.textContent = primary
-        ? `${primary.label}: ${primary.value}`
-        : 'Insights will appear here soon.';
-    }
+    if (coachSummaryInsight) coachSummaryInsight.textContent = formatInsightBadge(items[0]);
   }
 
   function renderCareerHealth() {
@@ -781,7 +797,7 @@
     });
     if (coachSummaryTip) {
       const primaryTip = lastCoachTips[0];
-      coachSummaryTip.textContent = primaryTip || 'Fresh tips are loading.';
+      coachSummaryTip.textContent = primaryTip ? shortenSummaryText(primaryTip, 26) : 'Loading';
     }
   }
 
