--- a/workspace.html
+++ b/workspace.html
@@ -166,9 +166,14 @@
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
   .coach-summary-body{display:flex;flex-direction:column;gap:8px;color:#1f4f94;font-size:11px;line-height:1.3;min-width:0}
   .coach-summary-title{margin:0;font-size:12px;font-weight:700;color:#0f3e7c;letter-spacing:.4px;text-transform:uppercase}
-  .coach-summary-row{display:flex;align-items:center;justify-content:space-between;gap:8px}
-  .coach-summary-label{text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:10px;white-space:nowrap}
-  .coach-summary-chip{display:inline-flex;align-items:center;justify-content:center;gap:4px;padding:3px 8px;border-radius:999px;background:#edf4ff;border:1px solid #c8d9f4;color:#0f3e7c;font-weight:600;font-size:11px;white-space:nowrap;min-width:0}
+  .coach-summary-row{display:flex;align-items:center;justify-content:space-between;gap:10px}
+  .coach-summary-label{display:inline-flex;align-items:center;gap:6px;text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:10px;white-space:nowrap}
+  .coach-summary-icon{width:20px;height:20px;border-radius:50%;background:#e6f1ff;display:inline-flex;align-items:center;justify-content:center;font-size:11px;box-shadow:inset 0 0 0 1px rgba(10,102,194,.1)}
+  .coach-summary-text{transition:opacity .2s ease}
+  .coach-summary-chip{display:inline-flex;align-items:center;justify-content:center;gap:4px;padding:4px 10px;border-radius:999px;background:#edf4ff;border:1px solid #c8d9f4;color:#0f3e7c;font-weight:600;font-size:11px;white-space:nowrap;min-width:48px}
+  .coach-summary:not(.coach-open) .coach-summary-text{display:none}
+  .coach-summary:not(.coach-open) .coach-summary-row{gap:6px}
+  .coach-summary:not(.coach-open) .coach-summary-chip{min-width:42px;padding:4px 8px}
   .coach-summary-chip.is-muted{color:#2c4f80;font-weight:500}
   .coach-summary-toggle{margin-left:auto;background:var(--brand);color:#fff;border:0;border-radius:999px;width:30px;height:30px;display:grid;place-items:center;cursor:pointer;box-shadow:0 6px 16px rgba(10,102,194,.25);transition:background .2s ease,transform .2s ease;flex-shrink:0}
   .coach-summary-toggle:hover{background:var(--brand-d)}
@@ -191,28 +196,52 @@
     <div class="coach-summary-body" id="coachSummaryBody" role="status" aria-live="polite" aria-atomic="true">
       <p class="coach-summary-title">Sprint Snapshot</p>
       <div class="coach-summary-row">
-        <span class="coach-summary-label">Progress</span>
-        <span class="coach-summary-chip" id="coachSummaryProgressValue">0 / 0</span>
+        <span class="sr-only" id="coachSummaryProgressLabel">Progress</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">📈</span>
+          <span class="coach-summary-text">Progress</span>
+        </span>
+        <span class="coach-summary-chip" id="coachSummaryProgressValue" aria-labelledby="coachSummaryProgressLabel">0 / 0</span>
       </div>
       <div class="coach-summary-row">
-        <span class="coach-summary-label">Streak</span>
-        <span class="coach-summary-chip is-muted" id="coachSummaryProgressNote">0 days</span>
+        <span class="sr-only" id="coachSummaryStreakLabel">Streak</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">🔥</span>
+          <span class="coach-summary-text">Streak</span>
+        </span>
+        <span class="coach-summary-chip is-muted" id="coachSummaryProgressNote" aria-labelledby="coachSummaryStreakLabel">0 days</span>
       </div>
       <div class="coach-summary-row">
-        <span class="coach-summary-label">Insight</span>
-        <span class="coach-summary-chip" id="coachSummaryInsight">Pending</span>
-      </div>
-      <div class="coach-summary-row" aria-label="Resume score">
-        <span class="coach-summary-label">Resume</span>
-        <span class="coach-summary-chip" id="coachSummaryResume">--</span>
-      </div>
-      <div class="coach-summary-row" aria-label="Job description fit score">
-        <span class="coach-summary-label">JD Fit</span>
-        <span class="coach-summary-chip" id="coachSummaryJDFit">--</span>
+        <span class="sr-only" id="coachSummaryInsightLabel">Insight</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">💡</span>
+          <span class="coach-summary-text">Insight</span>
+        </span>
+        <span class="coach-summary-chip" id="coachSummaryInsight" aria-labelledby="coachSummaryInsightLabel">Pending</span>
       </div>
       <div class="coach-summary-row">
-        <span class="coach-summary-label">Tip</span>
-        <span class="coach-summary-chip is-muted" id="coachSummaryTip">Loading</span>
+        <span class="sr-only" id="coachSummaryResumeLabel">Resume score</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">📄</span>
+          <span class="coach-summary-text">Resume</span>
+        </span>
+        <span class="coach-summary-chip" id="coachSummaryResume" aria-labelledby="coachSummaryResumeLabel">--</span>
+      </div>
+      <div class="coach-summary-row">
+        <span class="sr-only" id="coachSummaryJDFitLabel">Job description fit score</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">🎯</span>
+          <span class="coach-summary-text">JD Fit</span>
+        </span>
+        <span class="coach-summary-chip" id="coachSummaryJDFit" aria-labelledby="coachSummaryJDFitLabel">--</span>
+      </div>
+      <div class="coach-summary-row">
+        <span class="sr-only" id="coachSummaryTipLabel">Tip</span>
+        <span class="coach-summary-label" aria-hidden="true">
+          <span class="coach-summary-icon" aria-hidden="true">📝</span>
+          <span class="coach-summary-text">Tip</span>
+        </span>
+        <span class="coach-summary-chip is-muted" id="coachSummaryTip" aria-labelledby="coachSummaryTipLabel">Loading</span>
       </div>
     </div>
     <button class="coach-summary-toggle" id="coachSummaryToggle" type="button" aria-controls="sprintCoachPanel" aria-expanded="false" aria-label="Open Sprint Coach">
