--- a/workspace.html
+++ b/workspace.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="styles/theme.css"/>
 <style>
   :root{
+    --topbar-height:60px;
     --bg1:#f0f6ff; --bg2:#e1edff; --ink:#0b1a33; --muted:#4b6078;
     --card:#fff; --line:#d5e3f7; --brand:#0a66c2; --brand-d:#084a91;
     --lane:#eef5ff; --shadow:0 12px 34px rgba(10,102,194,.12);
@@ -162,9 +163,9 @@
   .coach-icon-btn:hover{background:#edf4ff}
   .coach-tips{margin:0;padding-left:18px;display:flex;flex-direction:column;gap:6px;color:#2c4f80;font-size:13px}
   .coach-footer{text-align:center;font-size:11px;color:#4a6ba3;padding-bottom:10px;display:flex;flex-direction:column;gap:4px}
-  .coach-summary{position:fixed;left:0;top:0;bottom:0;width:var(--coach-summary-width);height:100vh;z-index:34;display:flex;align-items:flex-start;gap:8px;padding:12px 12px 12px 16px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
+  .coach-summary{position:fixed;left:0;top:var(--topbar-height);width:var(--coach-summary-width);height:calc(100vh - var(--topbar-height));z-index:34;display:flex;align-items:stretch;gap:8px;padding:12px 12px 12px 16px;background:rgba(255,255,255,.95);border:1px solid #c8d9f4;border-left:0;border-radius:0 14px 14px 0;box-shadow:var(--shadow);overflow-y:auto;transition:box-shadow .2s ease}
   .coach-summary:focus-within{box-shadow:0 12px 28px rgba(10,102,194,.2)}
-  .coach-summary-body{display:flex;flex-direction:column;gap:8px;color:#1f4f94;font-size:11px;line-height:1.3;min-width:0}
+  .coach-summary-body{display:flex;flex:1;flex-direction:column;justify-content:space-between;gap:16px;color:#1f4f94;font-size:11px;line-height:1.3;min-width:0}
   .coach-summary-title{margin:0;font-size:12px;font-weight:700;color:#0f3e7c;letter-spacing:.4px;text-transform:uppercase}
   .coach-summary-row{display:flex;align-items:center;justify-content:space-between;gap:10px}
   .coach-summary-label{display:inline-flex;align-items:center;gap:6px;text-transform:uppercase;letter-spacing:.4px;font-weight:600;color:#5271a6;font-size:10px;white-space:nowrap}
